--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Get testing lib
       run: set -eu && git clone https://github.com/girolle/open-tests.git
     - name: Run test
-      run: ./open-tests/run.sh.x
+      run: node open-tests/run.js
