--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,6 +24,10 @@ jobs:
       if: ${{github.event.repository.private}}
     - name: Get testing lib
       run: set -eu && git clone https://github.com/girolle/open-tests.git
+    - name: npm i
+      run: npm i
+    - name: Run server
+      run: npm run start
     - name: Run test
       run: ./open-tests/run.sh.x
       #run: node open-tests/run.js
