--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
     - name: npm i
       run: npm i
     - name: Run server
-      run: npm run start
+      run: npm run start &
     - name: Run test
       run: ./open-tests/run.sh.x
       #run: node open-tests/run.js
