--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         node-version: [12.x]
-        mongodb-version: ['4.0', '4.2', '4.4']
+        mongodb-version: ['4.4']
     steps:
     - name: Set up GitHub Actions
       uses: actions/checkout@v2
@@ -31,12 +31,8 @@ jobs:
         mongodb-version: ${{ matrix.mongodb-version }}
     - name: npm i
       run: npm i
-    - name: netstat1
-      run: netstat --all --program
     - name: Run server
       run: npm run start &
-    - name: netstat2
-      run: netstat --all --program
     - name: Run test
       run: ./open-tests/run.sh.x
       #run: node open-tests/run.js
