--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,8 @@
 {
   "name": "yandex_praktikum",
   "version": "0.0.1",
-  "homepage": "https://prokopenko-nikita-dev.github.io/mesto-react-auth",
+  "homepage": "http://domainname.nikitapro.nomoreparties.co/mesto",
+  "proxy": "http://localhost:3000",
   "description": "![Visual Studio Code](https://img.shields.io/badge/Visual%20Studio%20Code-0078d7.svg?style=for-the-badge&logo=visual-studio-code&logoColor=white)",
   "main": "index.js",
   "scripts": {
