--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,7 @@
 {
   "name": "yandex_praktikum",
   "version": "0.0.1",
-  "homepage": "http://domainname.nikitapro.nomoreparties.co",
-  "proxy": "http://localhost:3000",
+  "homepage": "https://prokopenko-nikita-dev.github.io/react-mesto-auth/",
   "description": "![Visual Studio Code](https://img.shields.io/badge/Visual%20Studio%20Code-0078d7.svg?style=for-the-badge&logo=visual-studio-code&logoColor=white)",
   "main": "index.js",
   "scripts": {
@@ -17,17 +16,11 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.21.4",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.21.4",
     "autoprefixer": "^10.4.14",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
     "cssnano": "^6.0.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.5",
